# vibe-trading

./: .gitignore  LICENSE  README.md
backend/: Cargo.toml  README.md  run.sh
backend/src/: lib.rs  main.rs  mock_server.py
backend/src/api/: handlers.rs  mod.rs  websocket.rs
backend/src/exchange/: crypto.rs  mod.rs
backend/src/market_data/: mod.rs
backend/src/order/: mod.rs  router.rs
backend/src/strategy/: mod.rs  statistical_arbitrage.rs
backend/temp/: index.json
backend/temp/api/: index.json
backend/temp/api/account/balance/: index.json
backend/temp/api/health/: index.json
backend/temp/api/market/data/BTC-USD/: index.json
backend/temp/api/market/symbols/: index.json
backend/temp/api/strategy/: index.json
backend/temp/api/strategy/Statistical-Arbitrage/params/: index.json
backend/tests/: lib.rs  simple_test.rs
backend/tests/integration/: exchange_order_workflow.rs  mod.rs
backend/tests/unit/: mod.rs
backend/tests/unit/exchange/: crypto.rs  crypto_tests.rs  mod.rs  mod_tests.rs
backend/tests/unit/market_data/: mod.rs  mod_tests.rs
backend/tests/unit/order/: mod.rs  mod_tests.rs
backend/tests/unit/strategy/: mod.rs  mod_tests.rs
frontend/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/api-docs/: README.md  page.tsx
frontend/src/components/api/: CategorySection.tsx  EndpointCard.tsx
frontend/src/services/: apiDocService.ts  marketService.ts
frontend/src/store/: index.ts
frontend/src/store/slices/: accountSlice.ts  marketSlice.ts  ordersSlice.ts  strategySlice.ts  uiSlice.ts
frontend/src/types/: api.ts
